--- a/src/css/crowe.css
+++ b/src/css/crowe.css
@@ -1,5 +1,5 @@
 .external {
-	background-image: url(/src/img/external-link.svg);
+	background-image: url(../img/external-link.svg);
 	background-position: center right;
 	background-repeat: no-repeat;
 	padding-right: 13px;
